fix z-index

--- a/public/css/image-gallery.css
+++ b/public/css/image-gallery.css
@@ -95,7 +95,7 @@
     height: 800px;
     background-color: rgba(0,0,0,0.9);
     position: absolute;
-    z-index: 5;
+    z-index: 1;
     top: 0;
     left: -300px;
 }
